--- a/StorkEngine/StorkEngineApi/StorkEngineApi.csproj
+++ b/StorkEngine/StorkEngineApi/StorkEngineApi.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.Cors" Version="5.3.0" />
+    <PackageReference Include="Microsoft.AspNet.SignalR" Version="2.4.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.Text.Json" Version="8.0.3" />
   </ItemGroup>
